# convoke

./: .coverage  .gitignore  README.md  pyproject.toml  setup_new_project.py
artifacts/modules/MainModules/: design
convoke/: agents.py  artifact_manager.py  basic.py  cli.py  config.yaml  convoke.py  crewai_tools.py  events.py  parsers.py  project.py  store.py  tools.py  utils.py  workflow.py
docs/: implementation_plan.md  improved_agent_output_handling.md  original_convoke.md  production_web_interface_plan.md  refactoring_plan.md  step_by_step_implementation_plan.md
scripts/: setup_new_project.py
tests/: conftest.py  test_agents.py  test_parsers.py  test_project.py  test_store.py  test_tools.py  test_workflow.py  test_workflow_extended.py
