[tool.poetry]
name = "convoke"
version = "0.1.0"
description = "Convoke - Urza's Interns: A multi-agent AI system for collaborative software design."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "convoke" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
crewai = "^0.118.0"
openai = "^1.77.0"
crewai-tools = "^0.43.0"
dotenv = "^0.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.11.8"
mypy = "^1.15.0"
types-requests = "^2.32.0.20250328"
types-pyyaml = "^6.0.12.20250402"
types-setuptools = "^80.3.0.20250505"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 110
target-version = "py312"
select = ["E", "F", "B"]
ignore = ["E501"]  # optional: ignore long lines

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"  # or "single", your call

[tool.mypy]
python_version = 3.12
strict = true
ignore_missing_imports = true

